--- a/home.html
+++ b/home.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anna Grigorescu - Personal Website</title>
+    <title>Anna Grigorescu - Personal Website
+        Under construction-- check back later!
+    </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,7 +27,7 @@
         <div class="container">
             <h2>About Me</h2>
             <p>Write a brief introduction about yourself here.</p>
-            <img src="profile-pic.jpg" alt="Anna Grigorescu">
+            <img src="assets/me.png" alt="Anna Grigorescu">
         </div>
     </section>
 
