--- a/home.html
+++ b/home.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anna Grigorescu - Personal Website
-        Under construction-- check back later!
+    <title>Anna G
     </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Anna Grigorescu</h1>
+            <h1>Anna Grigorescu
+            </h1>
+            <h2>Under construction-- check back later!
+            </h2>
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#resume">Resume</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#awards">Awards</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -26,22 +27,71 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>Write a brief introduction about yourself here.</p>
-            <img src="assets/me.png" alt="Anna Grigorescu">
+            <img id = "profile-pic" src="assets/me.png" alt="Anna Grigorescu">
+            <p>Hello! I'm Anna Grigorescu, a senior at Evanston Township High School 
+                who will be studying Computer Science at Northwestern or UIUC in the fall.</p>
+
+            <p>Beyond the classroom, I enjoy participating in coding clubs, hackathons, and
+                 other organizations such as ETHS’ Animal Welfare Club and Scholastic Bowl 
+                 Team. These experiences have not only advanced by technical abilities but 
+                 also taught me perseverance, leadership, prganization, and communication.</p>
+            <p>As I further my education, I also look forward to opportunities to using my
+                 skills and passions to make a positive impact in the tech world.</p>
         </div>
     </section>
 
-    <section id="resume">
+    <section id="Experiences and Leadership">
         <div class="container">
-            <h2>Resume</h2>
-            <!-- Insert your resume content here -->
+            <h2>ETHS ChromeZone Intern (June 2021-May 2024)</h2>
+            <p> In this position, I delivered front line customer support within the school's central help desk to
+                 support students and staff with their Chromebook computers, checked in/out loaners
+                  and customer devices coming in/out of repair, and diagnosed and performed troubleshooting
+                  on out-of-warranty Chromebooks, and performed technical repairs through software
+                updates and replacement of major parts including batteries, screens, keyboards, motherboards,
+                 and other modular components
+            </p>
+            <br>
+            <h2>Loyola University Chicago Software Systems Laboratory Intern (June 2022-August 2022)</h2>
+            <p> In this position, I worked in Flask, HTML, CSS, and JS to build the frontend to a tool that 
+                allows users to test the efficiency of their computer vision software on low-powered machines,
+                 assisted in a (now published) research paper about the risks of open-source machine learning
+                model hubs, and helped assemble a 3d printing lab.
+                
+            </p>
+            <h2>ETHS EMERGE Leadership Development Program</h2>
+            <p> My freshman year, I created a climate curriculum taught to 3,700 students so far. Sophomore year, I 
+                facilitated a collaboration between local school gardens and Evanston Grows (a local food insecurity
+                 organization), and I acted as the co-chair of the outreach committee in grades 11 and 12.
+                
+            </p>
         </div>
     </section>
 
-    <section id="portfolio">
+    <section id="awards">
         <div class="container">
-            <h2>Portfolio</h2>
-            <!-- Insert your portfolio content here -->
+            <h2>Awards</h2>
+            <ul>
+                <li>
+                    <strong>National Merit Scholar</strong> (2024)
+                </li>
+                <br>
+                <li>
+                    <strong>Presidential Scholar's Program Candidate</strong> (2024)
+                </li>
+                <br>
+                <li>
+                    <strong>National Honor Society</strong> (2023, 2024)
+                </li>
+                <br>
+                <li>
+                    <strong>Desmos Global Graphing Art Finalist</strong> (2022)
+                </li>
+                <br>
+                <li>
+                    <strong>ETHS High Honor Roll</strong> (2020-2024)
+                </li>
+
+            </ul>
         </div>
     </section>
 
