--- a/home.html
+++ b/home.html
@@ -42,7 +42,8 @@
 
     <section id="Experiences and Leadership">
         <div class="container">
-            <h2>ETHS ChromeZone Intern (June 2021-May 2024)</h2>
+            <h2>About Me</h2>
+            <h3>ETHS ChromeZone Intern (June 2021-May 2024)</h3>
             <p> In this position, I delivered front line customer support within the school's central help desk to
                  support students and staff with their Chromebook computers, checked in/out loaners
                   and customer devices coming in/out of repair, and diagnosed and performed troubleshooting
@@ -51,19 +52,20 @@
                  and other modular components
             </p>
             <br>
-            <h2>Loyola University Chicago Software Systems Laboratory Intern (June 2022-August 2022)</h2>
+            <h3>Loyola University Chicago Software Systems Laboratory Intern (June 2022-August 2022)</h3>
             <p> In this position, I worked in Flask, HTML, CSS, and JS to build the frontend to a tool that 
                 allows users to test the efficiency of their computer vision software on low-powered machines,
                  assisted in a (now published) research paper about the risks of open-source machine learning
                 model hubs, and helped assemble a 3d printing lab.
-                
             </p>
-            <h2>ETHS EMERGE Leadership Development Program</h2>
+            <br>
+            <h3>ETHS EMERGE Leadership Development Program</h3>
             <p> My freshman year, I created a climate curriculum taught to 3,700 students so far. Sophomore year, I 
                 facilitated a collaboration between local school gardens and Evanston Grows (a local food insecurity
                  organization), and I acted as the co-chair of the outreach committee in grades 11 and 12.
                 
             </p>
+            <br>
         </div>
     </section>
 
