--- a/home.html
+++ b/home.html
@@ -40,9 +40,9 @@
         </div>
     </section>
 
-    <section id="Experiences and Leadership">
+    <section id="experiences">
         <div class="container">
-            <h2>About Me</h2>
+            <h2>Experiences and Leadership</h2>
             <h3>ETHS ChromeZone Intern (June 2021-May 2024)</h3>
             <p> In this position, I delivered front line customer support within the school's central help desk to
                  support students and staff with their Chromebook computers, checked in/out loaners
@@ -64,6 +64,22 @@
                 facilitated a collaboration between local school gardens and Evanston Grows (a local food insecurity
                  organization), and I acted as the co-chair of the outreach committee in grades 11 and 12.
                 
+            </p>
+            <br>
+
+            <h3>ETHS Scholastic Bowl Team</h3>
+            <p> I joined the club my freshman year and advanced to Varsity my sophomore year.
+                 I became a captain my Junior year; that year we we rose from bottom of 
+                 our region to #65 in the nation. Individually, in 2023 I placed 18th in 
+                 social sciences in the country and 38th in fine arts.
+            </p>
+            <br>
+
+            <h3>ETHS Animal Welfare Club</h3>
+            <p> I joined the club my freshman year and became the president my junior year. I 
+                spearheaded projects to help local animals such as drives, fundraisers, and 
+                writing campaigns. I was also responsible for the club’s meetings, schedule, 
+                activities, recruitment, and outreach.
             </p>
             <br>
         </div>
